--- a/ui/package.json
+++ b/ui/package.json
@@ -19,6 +19,8 @@
     "chain-registry": "1.28.0",
     "cosmos-kit": "^2.19.0",
     "daisyui": "^4.12.10",
+    "graphql": "^16.9.0",
+    "graphql-request": "^7.1.0",
     "lucide-react": "^0.453.0",
     "react": "^18.3.1",
     "react-daisyui": "^5.0.0",
@@ -31,13 +33,8 @@
     "@keplr-wallet/types": "^0.12.121",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
-    "@typescript-eslint/eslint-plugin": "^7.0.2",
-    "@typescript-eslint/parser": "^7.15.0",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.20",
-    "eslint": "^8.56.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.2.2",
